samples/_failures_safe/1761427280_b93f99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16690f7c.c: In function ‘main’:
./samples/SAFE/__tmp_16690f7c.c:171:5: error: expected expression at end of input
  171 |     for (int i = 0; i < token_count; i++)
      |     ^~~
./samples/SAFE/__tmp_16690f7c.c:171:5: error: expected declaration or statement at end of input
